engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/panel.less
/* ... */
/* A small dot navigation for example for a slider panel.

```
<div class="panel--dot-nav">
    <a href=""></a>
    <a href="" class="is--active"></a>
    <a href=""></a>
</div>
```
*/
.panel--dot-nav {
	.unitize(12, 16, bottom);
    position: absolute;

    a {
        .unitize-variable(21, 16);
        .border-radius(11px);
        .unitize-margin(0, 5);
        .unitize-width(11);
        .unitize-height(11);
        display: inline-block;
        border: 1px solid @borderColor;

        &.is--active {
            border-color: @primaryColor;
            background: @primaryColor;
        }
    }
}

/* A tab navigation for a tab-content panel.

```
<div class="panel">
    <ul class="panel--tab-nav">
        <li><a href="" class="is--active"></a></li>
        <li><a href=""></a></li>
    </ul>
    <div class="panel--body has--border">
        <div class="panel--tab-content is--active"></div>
        <div class="panel--tab-content"></div>
    </div>
</div>
```
*/
.panel--tab-nav {
    list-style: none;

    .navigation--entry {
        display: inline-block;
    }

    .navigation--link {
        .unitize-padding(10, 15);
        .unitize-margin(0, 5, 0, 0);
        .unitize(24, 16, line-height);
        .unitize(14, 16, font-size);
        .linear-gradient(#ffffff, #eff0f3);
        .border-radius-multi(3px, 3px, 0, 0);
        display: block;
        position: relative;
        z-index: 90;
        font-weight: bold;
        text-align: center;
        color: #748595;
        border-width: 1px 1px 0 1px;
        border-style: solid;
        border-color: @borderColor;

        &.is--active {
            .unitize(1, 16, top);
            color: @darkTextColor;
            background: #fff;

            &:hover {
                color: @darkTextColor;
            }
        }

        &:hover {
            color: @primaryColor;
            background: #fff;
        }
    }
}

/* A content box for a tab-content panel.

```
<div class="panel">
    <ul class="panel--tab-nav">
        <li><a href="" class="is--active"></a></li>
        <li><a href=""></a></li>
    </ul>
    <div class="panel--body has--border">
        <div class="panel--tab-content is--active"></div>
        <div class="panel--tab-content"></div>
    </div>
</div>
```
*/
.panel--tab-content {
    display: none;
    position: relative;
    top: 0;
    left: 0;
    z-index: 10;

    &.is--active {
        display: block;
        z-index: 11;
    }
}

/* A paging navigation for pagination content.

```
<div class="panel--paging">
    <a href=""><i class="icon--arrow-left"></i></a>
    <a href="">1</a>
    <a href="">2</a>
    <a href="">...</a>
    <a href=""><i class="icon--arrow-right"></i></a>
</div>
```
*/
.panel--paging {
    display: inline-block;

    a {
        display: inline-block;
        color: @primaryTextColor;
        font-weight: normal;
        text-align: center;
        border: 1px solid #c7cfda;
        .unitize-padding(0, 10);
        .unitize-margin(0, 1);
        .unitize(14, 16, font-size);
        .unitize(26, 16, line-height);
        .border-radius(3px);
        .linear-gradient(#ffffff, #edeff2);
        .box-shadow(0 1px 1px 0 rgba(0, 0, 0, 0.05));

        [class^="icon--"] {
            .unitize(10, 16, font-size);
        }

        &.is--active {
            font-weight: bold;
            color: @primaryColor;
        }

        &:hover {
            color: @primaryColor;
        }
    }
}

/* A btn for filter options in a filter action panel.

```
<a href="" class="panel--filter-btn">
  <i class="icon--numbered-list"></i> Weitere Filtermöglichkeiten
</a>
```
*/
.panel--filter-btn {
    display: inline-block;
    color: @primaryTextColor;
    font-weight: normal;
    text-align: center;
    border: 1px solid #c7cfda;
    .unitize-padding(0, 10);
    .unitize-margin(0, 10);
    .unitize(14, 16, font-size);
    .unitize(26, 16, line-height);
    .border-radius(3px);
    .linear-gradient(#ffffff, #edeff2);
    .box-shadow(0 1px 1px 0 rgba(0, 0, 0, 0.05));

    i {
        .unitize-margin(0, 10, 0, 0);
        .unitize(10, 16, font-size);
    }

    &:hover {
        color: @primaryColor;
    }
}

/* A combobox for a filter selection.

```
<div class="panel--filter-select">
    <span class="arrow"></span>
    <select name="selection" size="1">
        <option>Option 1</option>
        <option>Option 2</option>
        <option>Option 3</option>
    </select>
</div>
```
*/
.panel--filter-select {
    display: inline-block;
    vertical-align: bottom;
    position: relative;
    border: 1px solid #c7cfda;
    overflow: hidden;
    .unitize-width(160);
    .unitize-height(28);
    .unitize(14, 16, font-size);
    .unitize(26, 16, line-height);
    .border-radius(3px);
    .box-sizing();
    .box-shadow(0 1px 1px 0 rgba(0, 0, 0, 0.05));
    .linear-gradient(#ffffff, #edeff2);

    .arrow {
        .unitize-width(34);
        .unitize(6, 16, font-size);
        .unitize(28, 16, line-height);
        display: block;
        position: absolute;
        top: 0;
        right: 0;
        border-left: 1px solid @borderColor;
        font-family: 'shopware';
        text-align: center;

        &:before,
        &::before {
            content: "\e612";
        }
    }

    select {
        .unitize-width(180);
        .unitize-padding(0, 0, 0, 10);
        .unitize(14, 16, font-size);
        .unitize(26, 16, line-height);
        .appearance(none);
        color: @primaryTextColor;
        background: transparent;
        border: 0 none;
    }

    option {
        .unitize-padding(0, 10);
        display: block;
        border: 0 none;
        background: #fff;
    }
}
/* ... */

